commit before new package

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,8 @@
   </head>
 
   <body>
-    <div id="app">
-      <!-- REACT -->
-    </div>
+    <div id="hello"></div>
+    <div id="letterAnimation"></div>
    <script src="/output/bundle.js"></script>
   </body>
 </html>
